--- a/documentation/todo.txt
+++ b/documentation/todo.txt
@@ -1,21 +1,26 @@
 By line order (Specific --> Abstract):
 
-*	Change all font rendering to use bufferedimage.creategraphics().
-Fix NewDialogue rendering issues.
-Work on NewDialogue.QUESTION.
-Work on replacing Dialogue with NewDialogue.
-Work on Saving.
-Work on Short Grass.
-Work on Tall Grass.
+
+Work on scripted actions.
+Work on scripted events.
+
+Update documentation on new map format.
+
 Work on subregions, integrating with Saving.
-Work on items, integrating with Saving.
 Work on area modification by game events, integrating with Saving.
-Work on Battles.
+
+Work on Short Grass tileset.
+Work on Tall Grass tileset.
+
+Need to get assets of all Pokémon back and front sprites.
+	└ Work on Battles.
+Work on NPC	
+Work on AI
+
+	
 Work on Intro.
 Work on Victory Conditions.
 Work on Losing Conditions.
-Work on AI
-Work on NPC
 Work on Special Buildings. (Gyms, Pokemon Centers, Shops, Residentals, etc.)
 Work on Special NPCs (Gym Leaders, Nurse Joys, Clerks, etc.)
 Work on Story Plot
