--- a/documentation/todo.txt
+++ b/documentation/todo.txt
@@ -2,18 +2,13 @@ By line order (Specific --> Abstract):
 
 
 TOP PRIORITY:
-	├ Must fix pixel data loading in both the game and the editor.
-	├ Must find all bugs related to loading bitmaps and incorrect map data.
 	├ Must find all bugs related to bitmap tile collision properties.
-	└ Must add Biome Bitmap selection panel to the editor. Add biomes.
-	
+
 Add debug messages throughout the entire project. Log messages to be exact.
-
-
 Work on scripted events.
 
 Update documentation on new map format.
-
+Must add Biome Bitmap selection panel to the editor. Add biomes.
 Work on subregions, integrating with Saving.
 Work on area modification by game events, integrating with Saving.
 
