Adding new TODO list. They are all in the TASK view in Eclipse.
Additionally, some of them are separated into the TODO list in the root folder.

Basically, this means the TODO list needs to be consolidated.

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,14 @@
 By line order (Specific --> Abstract):
 
+BEFORE CONTINUING WITH THIS LIST OF TODOs:
+
+Open the project and look at the Tasks view. That contains the full list of
+things needed to be done. Contains (FIXME) and (TODO).
+
 
 TOP PRIORITY:
 	├ Must find all bugs related to bitmap tile collision properties.
+		├ Door needs to be blocking if there is no area to walk to.
 
 Add debug messages throughout the entire project. Log messages to be exact.
 Work on scripted events.
